# cosy-setup

./: 00Liesmich  40-coob.conf  Makefile.am  README.md  VimbaViewer  bagira.access  bagira.gateway.conf  bagira.pvlist  blwanke  blwanke.kstart  bpm  configure.ac  coob  cosy-server-cmd  cosy-services.rsyslog.conf  cosy.sh  cosyEnv  cosy_logo_large.ppm  cosy_logo_large.ps  cosy_operator.ldif  defaults.bagira.gateway  desktop-cmd  dontpanic.xpm  ecool  ecool.kstart  ecsteer  ecsteer.kstart  errorlist  ethercat.sh  exsep  exsep.kstart  extr  extr.kstart  fun-alarm  fun-cmd  fun-info  genconf  guiStarter  guis.conf  hinfo  (+22 more)
